[package]
name = "tdown"
version = "0.1.0"
authors = ["powerboat9 <powerboat9.gamer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = {version = "0.11.4", features = ["json"]}
serde_json = "1.0.57"
clap = "2.33.0"
base64 = "0.12.3"
md5 = "0.7.0"
openssl = "0.10.30"
urlencoding = "1.1.1"