[package]
name = "tdown"
version = "0.1.0"
authors = ["powerboat9 <powerboat9.gamer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.0", features = ["json", "stream", "cookies"]}
serde_json = "1.0.57"
clap = "2.33.0"
base64 = "0.12.3"
md5 = "0.7.0"
openssl = {version = "0.10.30", features = ["vendored"]}
urlencoding = "1.1.1"
indicatif = "0.15.0"
tokio = {version = "1.0.2", features = ["full"]}
async-std = "1.9.0"
futures = "0.3.12"
bytes = "1.0.1"
pbr = "1.0.4"